force-app/main/default/objects/Emergency_Contact__c/fields/Name1__c.field-meta.xml
<CustomField>
    <fullName>Name1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Emergency Contacts (Student)</relationshipLabel>
    <relationshipName>Emergency_Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>