force-app/main/default/objects/Emergency_Contact__c/fields/Name3__c.field-meta.xml
<CustomField>
    <fullName>Name3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Emergency Contacts (Student)</relationshipLabel>
    <relationshipName>Emergency_Contacts4</relationshipName>
    <type>Lookup</type>
</CustomField>